tests/rosetta/out/Rust/catalan-numbers-2.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:57Z
fn main() {
    fn catalanRec(n: i32) -> i32 {
        if n == 0 {
            return 1;
        }
        let mut t1 = 2 * n;
        let mut t2 = t1 - 1;
        let mut t3 = 2 * t2;
        let mut t5 = t3 * catalanRec(n - 1);
        return ((t5 as f64) / ((n + 1) as f64)).parse::<i32>().unwrap();
    }
    fn main() -> () {
        for i in 1..16 {
            println!("{}", catalanRec(i).to_string());
        }
    }
    main();
}
